Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjNumber.quorum
class main
    action Main
        Text txt
        txt = cast(Text, 7.5)
    end
end